<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>pom-jipipe</artifactId>
        <groupId>org.hkijena</groupId>
        <version>6.0.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>jipipe-plugin-omnipose</artifactId>
    <version>6.0.0-SNAPSHOT</version>

    <name>jipipe-plugin-omnipose</name>
    <description>JIPipe Omnipose Integration</description>
    <inceptionYear>2022</inceptionYear>
    <url>https://www.jipipe.org/</url>

    <organization>
        <name>Leibniz Institute for Natural Product Research and Infection Biology - Hans Knöll Institute (HKI)</name>
        <url>https://www.leibniz-hki.de/</url>
    </organization>
    <licenses>
        <license>
            <name>mit</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>RGerst</id>
            <name>Ruman Gerst</name>
            <url>https://www.leibniz-hki.de/en/asb-staff-details.html?member=1027</url>
        </developer>
        <developer>
            <id>Zseresnyes</id>
            <name>Zoltán Cseresnyés</name>
            <url>https://www.leibniz-hki.de/en/asb-staff-details.html?member=144</url>
        </developer>
        <developer>
            <id>MTFigge</id>
            <name>Marc Thilo Figge</name>
            <url>https://www.leibniz-hki.de/en/staff-details.html?member=81</url>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>None</name>
        </contributor>
    </contributors>
    <mailingLists>
        <mailingList>
            <name>HKI Jena</name>
            <archive>https://www.leibniz-hki.de/de/angewandte-systembiologie.html</archive>
        </mailingList>
    </mailingLists>
    <scm>
        <connection>scm:git:https://github.com/applied-systems-biology/jipipe.git</connection>
        <developerConnection>scm:git:https://github.com/applied-systems-biology/jipipe.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/applied-systems-biology/jipipe</url>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/applied-systems-biology/jipipe/issues</url>
    </issueManagement>
    <ciManagement>
        <system>GitHub CI</system>
        <url>https://github.com/applied-systems-biology/jipipe</url>
    </ciManagement>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <license.licenseName>mit</license.licenseName>
        <license.copyrightOwners>N/A</license.copyrightOwners>
        <license.projectName>jipipe-omnipose</license.projectName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-plugin-ij</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-plugin-python</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-plugin-ij-algorithms</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-plugin-cellpose</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <!-- Disable enforcer, triggered by JDK8 limits introduced by SciJava -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <configuration>
                    <fail>false</fail>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
